<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="tagline">Let\'s create your own story</string>
    <string name="input_email">Input your email</string>
    <string name="input_password">Input your password</string>
    <string name="input_username">Input your username</string>
    <string name="password_warning">Password must 8 characters</string>
    <string name="already_have">Already have an account?  </string>
    <string name="dont_have">Don\'t have an account?  </string>
    <string name="input_name_first">Input name first</string>
    <string name="input_email_first">Input email first!</string>
    <string name="input_password_first">Input password first!</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_success">Login Success</string>
    <string name="story_failed">Story Failed</string>
    <string name="story_success">Story Success</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="sure">Are you sure?</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description_here">Description here...</string>
    <string name="permission_not_allowed">Permission is not allowed</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="input_image">Please input image first</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="desc_required">Description is required</string>
    <string name="logout_success">Logout Success</string>
    <string name="logout_failed">Logout Failed</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_success">Register Success</string>
    <string name="my_story_app">My Story App</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="email_warning">Input must be email</string>
    <string name="share_my_location">Share my location</string>
    <string name="retry">Try Again</string>
    <string name="input_first">Please fill the input first</string>
    <string name="input_correctly">Please fill input correctly</string>
</resources>